@@ -72,7 +72,9 @@ PASSTHROUGH_ENVIRONMENT = [
     "LC_TIME",
     "LC_NUMERIC",
     "LC_MONETARY",
-    "LC_MESSAGES"
+    "LC_MESSAGES",
+    "METACITY_VERBOSE",
+    "METACITY_USE_LOGFILE"
 ]
 
 #
